# needle-sbi

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
containerization/: base.def  needle.def
docs/: conf.py  index.md
docs/_static/: custom.css
docs/_templates/: sidebar-nav-all.html
docs/api/: index.rst
docs/api/law_tasks/: DownstreamTask.rst  EnsembleTask.rst  EstimatorTask.rst  FoldTask.rst  MainTask.rst  SnapshotTask.rst  SystematicTask.rst  index.rst
docs/api/needle_api/: config.rst  dataset.rst  index.rst  model.rst  train.rst
docs/api/needle_evaluation/: benchmark_detailed.rst  index.rst  pseudo_model.rst  pseudo_model_parallel.rst  pseudo_model_vectorized.rst
docs/api/needle_ml/: index.rst
docs/api/needle_utils/: array.rst  config_schema.rst  config_utils.rst  conversion.rst  dask_ingestor.rst  dataclass.rst  index.rst  logging.rst  luigi_utils.rst  normalization.rst  results.rst
docs/concepts/: dask_awkward.md  downstream_tasks.md  hydra_config.md  law_tasks.md  lightning_and_hydra_integration.md  task_hierarchy.md
docs/examples/fair_universe_demo/: index.md  models.md  overview.md  tasks.md
docs/for_devs/: locally_build_docs.md
docs/setup/: index.md
examples/fair_universe_demo/: .gitignore  README.md  pyproject.toml
examples/fair_universe_demo/conf/: config.yaml  test_settings.json  test_settings_nominal.json
examples/fair_universe_demo/conf/datamodules/: classifier.yaml  cnf.yaml
examples/fair_universe_demo/conf/models/: classifier.yaml  cnf.yaml
examples/fair_universe_demo/conf/trainers/: classifier.yaml  cnf.yaml
examples/fair_universe_demo/fair_universe_demo/models/: classifier.py  classifier_datamodule.py  nf_datamodule.py  nf_layers.py  nf_model.py
examples/fair_universe_demo/fair_universe_demo/tasks/: eval.py  histogram.py  neyman.py  plot_classifier.py  plot_nf.py  plot_results.py  plotting_mixin.py  score.py
examples/fair_universe_demo/fair_universe_demo/utils/: dataset.py  dataset_sharing.py  derived_quantities.py  eval.py  score.py  selection.py  stats.py  systematics.py  test_settings.py
examples/fair_universe_demo/tests/: test_compute_signal_fraction.py
needle/: __init__.py  cli.py
needle/api/: __init__.py  config.py  dataset.py  model.py  train.py
needle/etl/: __init__.py  array.py  column_normalization.py  conversion.py  dask_grouped_ingestor.py  dask_ingestor.py  grouped_normalization.py  normalization.py  validate_grouped_dataset_config.py
needle/evaluation/: __init__.py  dag_visualization.py  pseudo_model.py  pseudo_model_parallel.py  pseudo_model_vectorized.py
needle/law_tasks/: __init__.py  downstream.py  ensemble.py  estimator.py  fold.py  full_task.py  main.py  snapshot.py  systematic.py
needle/law_tasks/downstream_tasks/: validation_binary_classifier.py  validation_binary_classifier_task.py
needle/law_tasks/mixins/: __init__.py  collect_output.py  hydra.py
needle/law_tasks/workflows/: __init__.py  common.py  htcondor.py  local.py  slurm.py
needle/ml/: __init__.py
needle/ml/datasets/: __init__.py  grouped_base.py  grouped_delayed_dask.py  grouped_delayed_torch.py  io.py  kfold.py  padded_base.py  padded_delayed_dask.py  padded_delayed_torch.py  padded_eager.py
needle/ml/lightning/: __init__.py
needle/ml/validation/: __init__.py  validation_binary_classifier_master.py
needle/templates/: index  law.cfg  setup.sh
needle/templates/conf/: HTauTau_binary_ratio_train_config.yaml  HTauTau_binary_ratio_train_groupedpipeline_config.yaml  config.yaml  example_config_overfull.yaml
needle/tui/components/: version_info.py
needle/tui/plain_text/: needle_name_ascii.txt  welcome_message.sh
needle/utils/: __init__.py  config_schema.py  config_utils.py  dataclass.py  logging.py  luigi_utils.py  results.py
tests/: README.md  conftest.py
tests/benchmarks/: test_root_vs_parquet.py
tests/conf_tests/: config.yaml
tests/conf_tests/datamodules/: padded.yaml
tests/conf_tests/datasets/: delphes.yaml  fair_universe.yaml
tests/conf_tests/models/: mock_transformer.yaml  norm_flow.yaml  simple_mlp.yaml
tests/config/: test_config_utils.py
tests/ingestion/: test.parquet  test_ingestion.py  test_scaling.py
tests/ml/: conftest.py  test_dataset_padded_eager.py  test_dataset_padded_torch.py  test_kfold.py
tests/trainings/: test_fold_task.py
(+58 files in other folders)
