[build-system]
requires = ["hatchling"]          # use a hatchling backend
build-backend = "hatchling.build"

[project]
name = "needle-sbi"
version = "0.1.1"
description = "Workflow manager for NSBI tools in HEP"
authors = [
    {name = "Kylian Schmidt", email = "kylian.schmidt@kit.edu"},
    {name = "Stephen Jiggins"},
    {name = "Levi Evans"},
    {name = "Nino Kovacic"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["sbi", "nsbi", "simulation-based inference", "machine learning", "high energy physics", "workflow", "luigi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # data / HEP
    "awkward>=2.7",
    "dask[distributed]>=2025.2",
    "dask-awkward>=2025.9",
    "pyarrow>=19.0",
    "uproot>=5.6",
    # ml related packages
    "torch >=2.7,<2.11",
    "lightning>=2.5.6",
    "zuko>=1.3",
    # configuration and workflow related packages
    "hydra-core>=1.3.2",
    "law>=0.1.20",
    "luigi>=3.6",
    "pydantic>=2.11",
    "pyyaml>=6.0",
    # experiment tracking and visualization
    "mlflow>=3.5.1",
    "tensorboard>=2.19",
    "matplotlib>=3.10",
    # misc and useful packages
    "numpy>=2.2",
    "pandas>=2.2",
    "psutil>=7.0",
    "graphviz>=0.21",
    "plotly>=6.6.0",
    "tabulate>=0.9.0",
    "seaborn>=0.13.2",
    "mplhep>=0.4.1",
]

[project.urls]
Homepage = "https://needle-sbi.github.io/"
Documentation = "https://needle-sbi.readthedocs.io/en/latest/"
Repository = "https://github.com/needle-sbi/needle-sbi"

[dependency-groups]
dev = [
    "black>=25.1",
    "debugpy>=1.8",
    "flake8>=7.1",
    "flake8-debugger>=4.1",
    "ipykernel>=6.29",
    "pre-commit>=4.1",
    "pytest>=8.3",
    "pytest-cov >=3",
    "pytest-benchmark[histogram]>=5.2",
    "snakeviz>=2.2.2",
    "torch-tb-profiler>=0.4.3",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=0.13",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "myst-nb>=1.1.0",
    "sphinx-design",
    "furo>=2023.08.17",
    "pydata-sphinx-theme>=0.13.0",
    "sphinx-togglebutton",
    "rich>=13.0.0",
]

[project.scripts]
needle = "needle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["needle"]

[tool.uv.workspace]
members = ["examples/fair_universe_demo"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --tb=short --disable-warnings --benchmark-skip --benchmark-autosave -m='not slow' -m 'not law'"
markers = ["slow"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
plugins = ["luigi.mypy"]

[[tool.mypy.overrides]]
module = ["dask.*", "dask_awkward.*"]
ignore_missing_imports = true

[tool.flake8]
max_line_length = 120
extend_ignore = ["E203", "W503", "E704", "E123", "W293"]
