[project]
name = "fair-universe-demo"
version = "0.3.0"
description = "A pure Lightning implementation of the Contrastive Normalizing Flow solution for FAIR Universe HiggsML Challenge"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "awkward>=2.7",
    "pyarrow>=19.0",
    "torch>=2.7",
    "lightning>=2.5.6",
    "pydantic>=2.11",
    "pyyaml>=6.0",
    "mlflow>=3.5.1",
    "matplotlib>=3.10",
    "numpy>=2.2",
    "pandas>=2.2",
    "psutil>=7.0",
    "graphviz>=0.21",
    "plotly>=6.6.0",
    "pre-commit>=4.1.0",
    "mplhep>=0.4.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_universe_demo*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
plugins = ["luigi.mypy"]

[[tool.mypy.overrides]]
module = ["dask.*", "dask_awkward.*"]
ignore_missing_imports = true

[tool.flake8]
max_line_length = 120
extend_ignore = ["E203", "W503", "E704", "E123", "W293"]
